--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;900&family=Raleway:wght@100;300;400;500;600;700;900&display=swap');
-:root{
+
+:root {
     /*palet the colors*/
     --primary-solid: #FF3333;
     --primary-900: rgb(255, 51, 51, 0.9);
@@ -7,7 +8,7 @@
     --primary-300: rgb(255, 51, 51, 0.3);
 
     --secondary-solid: #1D84B5;
-    --secondary-900: rgb(29, 132, 181,0.9);
+    --secondary-900: rgb(29, 132, 181, 0.9);
     --secondary-500: rgb(29, 132, 181, 0.5);
     --secondary-300: rgb(29, 132, 181, 0.3);
 
@@ -16,96 +17,128 @@
     --dark-500: rgb(31, 31, 31, 0.5);
     --dark-300: rgb(31, 31, 31, 0.3);
 
-    --dark-bg-solid:#30343F;
-    --light-bg-solid:#FAFAFF;
-    --light-font-solid:#ffffff;
+    --dark-bg-solid: #30343F;
+    --light-bg-solid: #FAFAFF;
+    --light-font-solid: #ffffff;
 
     /*Typography */
-    --base-font:'inter', sans-serif;
+    --base-font: 'inter', sans-serif;
     --alternative-font: 'Raleway', sans-serif;
 
     /*font-sizes */
-    --font-display:4.6em;
+    --font-display: 4.6em;
     --font-jumbo: 3.8em;
-    --font-xlarge:3em;
-    --font-large:2.4em;
-    --font-medium:1.8em;
-    --font-small:1.6em;
-    --font-xsmall:1.4em;
+    --font-xlarge: 3em;
+    --font-large: 2.4em;
+    --font-medium: 1.8em;
+    --font-small: 1.6em;
+    --font-xsmall: 1.4em;
     /* spacings*/
-    --spacing-128:12.8res ;
+    --spacing-128: 12.8res;
     --spacing-68: 6.8res;
-    --spacing-36:3.6res ;
-    --spacing-28:2.8res ;
-    --spacing-24:2.4res ;
-    --spacing-16:1.6res ;
-    --spacing-12:1.2res ;
+    --spacing-36: 3.6res;
+    --spacing-28: 2.8res;
+    --spacing-24: 2.4res;
+    --spacing-16: 1.6res;
+    --spacing-12: 1.2res;
     --spacing-8: 0.8res;
 }
 
 *,
 *::before,
-*::after{margin: 0;
+*::after {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     list-style-type: none;
 }
-html{
-    font-family:var(--base-font);
+
+html {
+    font-family: var(--base-font);
     font-size: 62.5%;
-    color:var(--dark-solid);
+    color: var(--dark-solid);
+  
 }
+
 a {
     text-decoration: none;
-    font-size: 20px;
+    font-size: 2em;
     font-family: inherit;
     color: inherit;
 }
-header, footer{ 
+
+header,
+footer {
     font-family: var(--alternative-font);
-    color:var(--light-font-solid);}
-
-ul, ol {
-    list-style: none;    
-}
-p{
-    font-size: 18px;
+    color: var(--light-font-solid);
 }
 
-.container{
+ul,
+ol {
+    list-style: none;
+}
 
+p {
+    font-size: 1.8em;
+}
+/* centrar todos los cuerpos de la pagina */
+.container {
+    max-width: 1220px; 
     margin: 0 auto;
 }
-header nav{
-    background-color:var(--dark-bg-solid);
+/* configuración general del header */
+header {
+    background-color: var(--dark-bg-solid);
     width: auto;
     height: auto;
 }
-header nav picture{
-    display: flex;
-    width: auto;
-    height: auto;
 
+#container-header{
+    display: grid;
+    grid-template-columns: 372px 442px 55px 49px 109px 49px 62px 49px 33px;
+    grid-template-rows: 39px 65px 39px; 
+    
+}
+.grid-item1 {
+    grid-column-start: 1;
+    grid grid-column-end: 2;
+    grid-row-start:2;
+    grid-row-end:3;
+    
 }
 
-header nav ul{
-    display: flex;
-    justify-content: right;
-    align-items: right;
-    width: auto;
-    margin: 5px;
-    padding: 5px;
-}
-header nav ul li{
-
-    position: relative;
-    display: flex;
-    margin: 5px;
-    padding: 5px;
-
+.grid-item2 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start:2;
+    grid-row-end:3;
+    place-self: center;
 }
 
-.piePagina{
+
+.grid-item3 {
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start:2;
+    grid-row-end:3;
+    place-self: center;}
+
+.grid-item4 {
+    grid-column-start: 7;
+    grid-column-end: 8;
+    grid-row-start:2;
+    grid-row-end:3;
+    place-self: center;}
+
+.grid-item5 {
+    grid-column-start: 9;
+    grid-column-end: 10;
+    grid-row-start:2;
+    grid-row-end:3;
+    place-self: center;}
+
+
+.piePagina {
     color: black;
 }
 
@@ -114,7 +147,7 @@ header nav ul li{
 
 /* SHOP CSS */
 
-.buscar{
+.buscar {
     align-items: left;
 }
 
@@ -125,12 +158,11 @@ header nav ul li{
     display: grid;
 }
 
-@media screen and (min-width: 1280px) {
+/* @media screen and (min-width: 1280px) {
     .tienda {
-    height: auto;
-    grid-template-areas: "imagen1 imagen2 imagen3"
-    "imagen4 imagen5 imagen6"
-    "imagen7 imagen8 imagen9";
-    margin-right: 15px; } 
-}
-
+        height: auto;
+        grid-template-areas: "imagen1 imagen2 imagen3"
+            "imagen4 imagen5 imagen6"
+            "imagen7 imagen8 imagen9";
+        margin-right: 15px;
+    } */
