error css arreglado

--- a/css/index.css
+++ b/css/index.css
@@ -101,10 +101,9 @@ header {
 }
 .grid-item1 {
     grid-column-start: 1;
-    grid grid-column-end: 2;
+    grid-column-end: 2;
     grid-row-start:2;
     grid-row-end:3;
-    
 }
 
 .grid-item2 {
