--- a/css/index.css
+++ b/css/index.css
@@ -325,4 +325,17 @@ footer p {
 
 .buscar{
     float: left;
+    font-size: 16px;
+    margin: 10px;
+    padding: 10px;
+    color: black;
+
+}
+
+main aside .buscar div p ul li .filtrar .checkBox{
+    width: 14px;
+    height: 14px;
+    border: 300px solid black;
+    border-radius: 2px;
+    cursor: pointer;
 }
