--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,6 +1,6 @@
 /* configuración banner */
 .caracte-banner {
-    background-image: url(../img/funkos-banner.webp);
+    background-image: url(../../img/funkos-banner.webp);
     background-size: 100%;
     height: 344px;
     font-family: var(--alternative-font);
@@ -130,7 +130,7 @@ h4 {
 
 .img-card-wars {
     position: relative;
-    background-image: url(../img/star-wars/trooper-1.webp);
+    background-image: url(../../img/star-wars/trooper-1.webp);
     background-size: 100%;
     width: 359px;
     height: 352px;
@@ -138,7 +138,7 @@ h4 {
 
 .img-card-pokemon {
     
-    background-image: url(../img/pokemon/pidgeotto-1.webp);
+    background-image: url(../../img/pokemon/pidgeotto-1.webp);
     position: relative;
     background-size: 100%;
     width: 359px;
@@ -146,7 +146,7 @@ h4 {
 }
 
 .img-card-potter {
-    background-image: url(../img/harry-potter/luna-1.webp);
+    background-image: url(../../img/harry-potter/luna-1.webp);
     position: relative;
     background-size: 100%;
     width: 359px;
