--- a/css/pages/login.css
+++ b/css/pages/login.css
@@ -1,15 +1,14 @@
 .login-all {
-    /* display: flex;
+    display: flex;
     justify-content: center;
-    align-items: center; */
-    text-align: center;
+    align-items: center;
+    /* text-align: center; */
 }
 
 .login {
-    /* width: 400px; */
+    width: 400px;
     /* margin-left: auto;
     margin-right: auto; */
-    
     padding-top: 36px;
     padding-bottom: 40px;
     /* text-align: center; */
@@ -18,16 +17,52 @@
     align-items: center; */
 }
 
-.login-box {
-width: 400px
-margin: 0 auto */
+/* .login-box {
+/* width: 400px */
+/* margin: 0 auto  */
  /* display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;  */
-}
+
 
 .login-header {
     /* width:fit-content */
-    font-size: 20px;;
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 1.68px;
+}
+
+.datos {
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.email {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.ingresar {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.pass1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.pass2 {
+    text-align: center;
+}
+
+.text {
+    display:block;
+}
+
+.write {
+    font-size: 20px;
 }
