--- a/css/pages/login.css
+++ b/css/pages/login.css
@@ -65,4 +65,21 @@ align-items: center;  */
 
 .write {
     font-size: 20px;
+    /* padding-top: 20PX; */
+    /* padding-bottom;: 20PX */
+}
+
+.complete {
+    border-style: solid;
+    border-width: 0px 0px 2px;
+    border-color: #FF3333;
+    padding-bottom: 6px;
+}
+
+.boton {
+    border-radius: 0%;
+    background-color: #FF3333;
+    border-color: #FF3333;
+    color: #FFFFFF
+    
 }
