terminado login con algunas cosas para corregir, tamaño letra password

--- a/css/pages/login.css
+++ b/css/pages/login.css
@@ -43,11 +43,16 @@ align-items: center;  */
 .email {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    padding-bottom: 20px;
 }
 
 .ingresar {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    padding-left: 70px;
+    padding-right: 50px;
+    padding-bottom: 20px;
+    
 }
 
 .pass1 {
@@ -71,15 +76,47 @@ align-items: center;  */
 
 .complete {
     border-style: solid;
+    width: 160px;
     border-width: 0px 0px 2px;
     border-color: #FF3333;
     padding-bottom: 6px;
+    color: var(--dark-bg-solid);
+    font-family: var(--base-font);
 }
 
+#pwd::placeholder {
+    padding-bottom: 13px;
+    background-image: url(../../img/icons/Group\ 95.svg);
+    background-size: 170px; 
+    background-repeat: no-repeat; /* Hace que no se repita el fondo dentro del placeholder*/
+    background-position: left;/*  Alinea el icono a la izquierda y al centro del campo de entrada */
+}
+
+::placeholder {
+    color: var(--gray);
+}
+
+
+
 .boton {
+    border: none;
     border-radius: 0%;
-    background-color: #FF3333;
-    border-color: #FF3333;
-    color: #FFFFFF
-    
+    background-color: var(--primary-solid);
+    color: var(--light-bg-solid);
+    outline: none;
+    height: 40px;
+    width: 100px;
+}
+
+.rec {
+    /* text-align: center; */
+    height: 40px;
+    line-height: 40px;
+    font-size: small;    
+}
+
+
+.forgot {
+    color: var(--secondary-solid);
+    font-size: 7px;
 }
