--- a/css/misc/variables.css
+++ b/css/misc/variables.css
@@ -18,6 +18,7 @@
     --dark-bg-solid: #30343F;
     --light-bg-solid: #FAFAFF;
     --light-font-solid: #ffffff;
+    --gray: #B9B9B9;
 
     /*Typography */
     --base-font: 'inter', sans-serif;
