se esta actualizando la pagina shop, me falta el aside

--- a/css/misc/normalize.css
+++ b/css/misc/normalize.css
@@ -32,7 +32,7 @@ ol {
     list-style: none;
 }
 
-p {
+section article p{
     font-size: var(--font-medium);
     padding-top: 5px;
     width: 458px;
