--- a/css/components/card.css
+++ b/css/components/card.css
@@ -1,7 +1,7 @@
 .img-card-wars {
     position: relative;
     background-image: url(../../img/star-wars/trooper-1.webp);
-    background-size: 100%;
+    background-size:  contain;
     width: 359px;
     height: 352px;
 }
@@ -10,7 +10,7 @@
     
     background-image: url(../../img/pokemon/pidgeotto-1.webp);
     position: relative;
-    background-size: 100%;
+    background-size: contain;
     width: 359px;
     height: 352px;
 }
@@ -18,7 +18,9 @@
 .img-card-potter {
     background-image: url(../../img/harry-potter/luna-1.webp);
     position: relative;
-    background-size: 100%;
+    background-size: contain;
     width: 359px;
     height: 352px;
+    padding: 0;
+    margin: 0;
 }
