--- a/css/pages/shop.css
+++ b/css/pages/shop.css
@@ -1,41 +1,100 @@
-.tienda {
+.texto-ima-3-pequeño-shop {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-flow: row;
     align-items: center;
-    flex-direction: row;
+    font-family: var(--base-font);
+    gap: 36px 24px;
 }
 
-.fila {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 100%;
+.texto-ima-3-pequeño-shop li {
+    width: 304.008px;
+    height: 512px;
 }
 
-.imagen {
-
-    width: 200px;
-    height: 200px;
-    margin: 10px 5px;
-}
-
-.pagination{
+/* dar formato a los numeros de pie de pagina */
+.pagination {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 180px;
+
 }
 
-.pagination a{
-    padding: 2px;
-    margin: 2px;
+.pagination a {
+    width: 44px;
+    height: 44px;
+    padding: 5px 4px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 4px;
+    margin-right: 8px;
+
 }
 
-.buscar{
+.pagination a:first-of-type {
+    padding: 5px 4px;
+    opacity: 0.5;
+    background: #919EAB;
+}
+
+.pagination a:nth-child(2) {
+    color: var(--primary-solid);
+    border: 1px solid var(--primary-solid);
+    background: var(--light-font-solid);
+}
+
+.pagination a:nth-child(n+3) {
+    color: #212B36;
+    border: 1px solid #dfe3e8d8;
+    background: var(--light-font-solid);
+}
+
+.buscar {
+    width: 243px;
+    text-transform: uppercase;
     float: left;
-    font-size: 16px;
+    font-size: var(--font-large);
     margin: 10px;
     padding: 10px;
     color: black;
+}
+
+aside section div p {
+    font-family: Inter;
+    font-size: 24px;
+}
+
+.texto-imaBusqueda aside section div form input:nth-child(1) {
+    width: 243.034px;
+    height: 44.285px;
+    flex-shrink: 0;
+    border-radius: 6px;
+    border: 2px solid var(--dark-bg-solid);
+    margin-top: 10px;
+    padding-left: 10px;
+    margin-bottom: 28px;
+}
+
+.texto-imaBusqueda aside section div form select:nth-child(1) {
+    width: 243.034px;
+    height: 44.285px;
+    flex-shrink: 0;
+    border-radius: 6px;
+    border: 2px solid var(--dark-bg-solid);
+    margin-top: 10px;
+    padding-left: 10px;
+    margin-bottom: 28px;
+}
+
+select {
+
+    position: relative;
+    image: url(../../img/icons/material-symbols_arrow-drop-down-rounded.svg);
+    right: 10px;
+    top: 10px;
+    width: 100%;
+    background-size:  contain;
+    
 }
