display grid en toda la planilla

--- a/css/pages/register.css
+++ b/css/pages/register.css
@@ -6,7 +6,7 @@
 }
 
 .register {
-    width: 400px;
+    width: 1040px;
     /* margin-left: auto;
     margin-right: auto; */
     padding-top: 36px;
@@ -17,13 +17,16 @@
     align-items: center; */
 }
 
-/* .register-box {
-/* width: 400px */
-/* margin: 0 auto  */
- /* display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;  */
+.texto {
+    color: #1F1F1F;
+    font-family: Raleway;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 1.28px;
+    padding-top:20px;
+}
 
 
 .register-header {
@@ -33,14 +36,20 @@ align-items: center;  */
     letter-spacing: 1.68px;
 }
 
-.datos {
-    padding-left: 50px;
-    padding-right: 50px;
+.datos-reg {
+    padding-left: 200px;
+    padding-right: 200px;
     padding-top: 20px;
     padding-bottom: 20px;
 }
 
-.email {
+.datospersonales {
+    display: grid;
+    grid-template-columns: 1fr ;
+    padding-bottom: 20px;
+}
+
+.datospersonales1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding-bottom: 20px;
