--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -9,21 +9,21 @@
     padding-top: 10.5em;
 }
 
-h2 {
+.ultimos-lanzamientos {
     font-family: var(--alternative-font);
     font-size: var(--font-display);
     text-transform: uppercase;
     font-style: normal;
 }
 
-h3 {
+.saga-productos {
     font-size: var(--font-jumbo);
     width: 441px;
     text-transform: uppercase;
     font-style: normal;
 }
 
-h4 {
+.nombre-producto {
     font-family: var(--base-font);
     font-size: 18px;
     font-weight: 700;
@@ -31,10 +31,6 @@ h4 {
     font-style: normal;
     padding-left: 13px;
 }
-
-
-
-
 
 #primer-tex {
     color: var(--dark-bg-solid);
@@ -66,4 +62,3 @@ h4 {
     height: 3px;
     background: var(--primary-solid);
 }
-
