--- a/css/components/card.css
+++ b/css/components/card.css
@@ -21,5 +21,12 @@
     background-size: contain;
     width: 359px;
     height: 352px;
-   
+}
+
+.img-card-yoda {
+    background-image: url(../../img/star-wars/baby-yoda-1.webp);
+    position: relative;
+    background-size: contain;
+    width: 550px;
+    height: 550px;
 }
