--- a/css/pages/cart.css
+++ b/css/pages/cart.css
@@ -66,7 +66,12 @@
     height: 118px;
     flex-shrink: 0;
   }
-  
+  .item_img_edit {
+    width: 150px;
+    height: 150px;
+    flex-shrink: 0;
+    border-bottom: 2px solid var(--primary-solid);
+  }
   .item_titles {
     display: grid;
     width: 275px;
