--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -29,7 +29,7 @@ h4 {
     font-weight: 700;
     text-transform: uppercase;
     font-style: normal;
-    padding-left: 13px;
+    
 }
 
 
@@ -41,7 +41,8 @@ h4 {
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    padding: 13px;
+    margin-bottom: 13.9px;
+    
 }
 
 #segundo-tex {
@@ -49,7 +50,7 @@ h4 {
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    padding: 13px;
+    margin-bottom: 13.9px;
 }
 
 #tercer-tex {
@@ -57,7 +58,7 @@ h4 {
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    padding-left: 13px;
+    margin-bottom: 13.9px;
 }
 
 .linea-3 {
