--- a/css/misc/variables.css
+++ b/css/misc/variables.css
@@ -39,6 +39,7 @@
     --spacing-36: 3.6rem;
     --spacing-28: 2.8rem;
     --spacing-24: 2.4rem;
+    --spacing-20: 2.0rem;
     --spacing-16: 1.6rem;
     --spacing-12: 1.2rem;
     --spacing-8: 0.8rem;
