--- a/css/partials/header.css
+++ b/css/partials/header.css
@@ -1,14 +1,59 @@
-header nav {
+.navbar{
     display: flex;
-    flex-flow: row;
-    height: 144px;
+   justify-content: space-between;
     align-items: center;
-    gap: 442px;
+}
+.navbar__menu{
+    display: flex;
+    align-items: center;
+    gap: var(--spacing-20);
+    overflow:visible ;
+}
+.navbar__logo{
+    max-width: 300px;
+}
+.navbar__menu{
+    display: flex;
+    align-items: center;
+    gap: var(--spacing-20);
+}
+.navbar__link{
+    font-size: var(--font-medium);
+    padding: var(--spacing-8) var(--spacing-16);
+    display: inline-block;
+    transition: background .3s ease-in-out;
+    position: relative;
+}
+.navbar__link:hover{
+    background-color: var(--primary-900);
 }
 
-header nav ul {
+.with_icon{
     display: flex;
-    flex-flow: row;
     align-items: center;
-    gap: 49px;
+    gap:var(--spacing-8);
 }
+
+.with__submenu:hover .submenu {
+    display: block;
+      }
+.submenu{
+    display: none;
+    width: 300px;
+position: absolute;
+background-color: var(--dark-bg-solid);
+}
+
+.submenu__link{
+display: block;
+ padding: var(--spacing-8) var(--spacing-16);
+font-size: var(--font-medium);
+transition: background .3s ease-in-out;
+}
+.submenu__link:hover{
+    background-color: var(--primary-900);
+    display: block;
+    padding: var(--spacing-8) var(--spacing-16);
+    font-size: var(--font-medium);
+    overflow: visible;
+} 
