se actualizo header de shop

--- a/css/partials/header.css
+++ b/css/partials/header.css
@@ -2,15 +2,16 @@
     display: flex;
    justify-content: space-between;
     align-items: center;
+    font-size: var(-font-medium);
+  
 }
 .navbar__menu{
     display: flex;
     align-items: center;
     gap: var(--spacing-20);
-    overflow:visible ;
 }
 .navbar__logo{
-    max-width: 300px;
+    max-width: 372px;
 }
 .navbar__menu{
     display: flex;
@@ -18,7 +19,7 @@
     gap: var(--spacing-20);
 }
 .navbar__link{
-    font-size: var(--font-medium);
+   
     padding: var(--spacing-8) var(--spacing-16);
     display: inline-block;
     transition: background .3s ease-in-out;
@@ -47,13 +48,13 @@ background-color: var(--dark-bg-solid);
 .submenu__link{
 display: block;
  padding: var(--spacing-8) var(--spacing-16);
-font-size: var(--font-medium);
+font-size: var(-font-medium);
 transition: background .3s ease-in-out;
 }
 .submenu__link:hover{
     background-color: var(--primary-900);
     display: block;
+    font-size: var(-font-medium);
     padding: var(--spacing-8) var(--spacing-16);
-    font-size: var(--font-medium);
     overflow: visible;
 } 
