--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,12 +1,55 @@
 /* configuración banner */
-.caracte-banner {
+.hero {
     background-image: url(../../img/funkos-banner.webp);
-    background-size: 100%;
-    height: 344px;
-    font-family: var(--alternative-font);
-    color: var(--light-font-solid);
+   padding: var(--spacing-128);
+    background-size:cover;
+    background-attachment: fixed;
     position: relative;
-    padding-top: 10.5em;
+    top: 0;
+    z-index: -1;
+  }
+.hero::before{
+    content: '';
+    background-color:rgba(0,0,0,0);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(2px) brightness(.9);
+  
+
+}
+.hero__content{
+    display: flex;
+    flex-direction: column;
+    gap:var(--spacing-20);
+    align-items: start;
+    z-index: 2;
+    position: relative;
+}
+.hero__title{
+    font-family: var(--alternative-font);
+    font-size: var(--font-jumbo);
+    color: var(--light-font-solid);
+}
+.hero__text{
+    font-family: var(--alternative-font);
+    color: var(--light-font-solid);   
+font-size: var(--font-medium);
+}
+.hero__link{
+display: inline-block;
+font-size: var(--font-medium);
+background-color: var(--light-bg-solid);
+padding: var(--spacing-12) var(--spacing-68);
+border-radius:50px ;
+font-weight: 500;
+transition: all .3s ease-in-out;
+}
+.hero__link:hover{
+    background-color: var(--primary-900);
+   color: var(--light-font-solid);
 }
 
 h2 {
@@ -65,6 +108,6 @@ h4 {
     position: relative;
     width: 645px;
     height: 3px;
-    background: var(--primary-solid);
+
 }
 
