--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -51,50 +51,50 @@ transition: all .3s ease-in-out;
     background-color: var(--primary-900);
    color: var(--light-font-solid);
 }
-
-h2 {
+.collection{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+}
+.collection:nth-child(2) .collection__cover{
+    order:-1;
+}
+.collection__content{
+display: flex;
+flex-direction: column;
+gap: var(--spacing-24);
+align-items: start;
+}
+.collection__title{
     font-family: var(--alternative-font);
     font-size: var(--font-display);
-    text-transform: uppercase;
-    font-style: normal;
+    font-weight: 500;
+}
+.collection__text{
+    font-family: var(--alternative-font);
+    font-size: var(-- font-large);
+    font-weight: 300;
+    border-bottom: 2px solid var(--primary-solid);
+    padding-bottom: var(--spacing-20);
+}
+.collection__link{
+    display:inline-block;
+    font-size: var(--font-medium);
+    background-color: var(--dark-bg-solid);
+    color: var(--light-font-solid);
+    padding: var(--spacing-16) var(--spacing-36);
+    border-radius: 50px;
+    font-weight: 500;
+    transition: background .3s ease-in-out;
+}
+.collection__link:hover {
+    background-color: var(--primary-900);
+
 }
 
-h3 {
-    font-size: var(--font-jumbo);
-    width: 441px;
-    text-transform: uppercase;
-    font-style: normal;
-}
-
-h4 {
-    font-family: var(--base-font);
-    font-size: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-style: normal;
-    
-}
 
 
 
-
-
-#primer-tex {
-    color: var(--dark-bg-solid);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    margin-bottom: 13.9px;
-    
-}
-
-#segundo-tex {
-    color: var(--dark-bg-solid);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    margin-bottom: 13.9px;
-}
 
 #tercer-tex {
     color: var(--secondary-solid);
@@ -104,10 +104,4 @@ h4 {
     margin-bottom: 13.9px;
 }
 
-.linea-3 {
-    position: relative;
-    width: 645px;
-    height: 3px;
-
-}
 
