se corrigio el home y el shop

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -108,7 +108,10 @@ align-items: start;
 .slider__items{
     display: flex;
     gap: var(--spacing-24);
-  
+    
+}
+.slider__item{
+   width: 390px;
     
 }
 
