--- a/css/pages/shop.css
+++ b/css/pages/shop.css
@@ -21,6 +21,7 @@
 }
 
 .pagination a {
+    display: flex;
     width: 44px;
     height: 44px;
     padding: 5px 4px;
@@ -30,25 +31,34 @@
     flex-shrink: 0;
     border-radius: 4px;
     margin-right: 8px;
+    font-size:var(--font-small) ;
 
 }
 
 .pagination a:first-of-type {
-    padding: 5px 4px;
+    
     opacity: 0.5;
     background: #919EAB;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 .pagination a:nth-child(2) {
+   
     color: var(--primary-solid);
     border: 1px solid var(--primary-solid);
     background: var(--light-font-solid);
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 .pagination a:nth-child(n+3) {
     color: #212B36;
     border: 1px solid #dfe3e8d8;
     background: var(--light-font-solid);
+  
 }
 
 .buscar {
