Se crea y corrige el html y css correspondiente a la pagina contact

--- a/css/pages/contact.css
+++ b/css/pages/contact.css
@@ -1,38 +1,75 @@
 .contacto {
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: var(--spacing-16);
+    margin-right: var(--spacing-16);
+}
+
+.tit_ppl {
+    font-family: var(--base-font);
+    margin: var(--spacing-16);
+    font-size: var(--font-xlarge);
+    font-weight: bold;
+    padding: var(--spacing-20);
+    text-align: center;
+}
+
+.cont {
+    width: 100%;
+    margin: auto;
+}
+
+.cont_flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .contacto .cont_flex {
-    padding: 15px;
+    padding: var(--spacing-16);
     padding-top: 0;
     margin-bottom: 30px;
-    border-bottom: 2px #ffee33;
 }
 
-.info_contacto .tit_colum {
-    font-family: 'righteous', cursive;
-    font-weight: 100;
+.colum_50 {
+    width: 49%;
+}
+
+.info_contacto {
+    height: 540px;
+    border-right: 2px solid;
+    border-bottom: none;
+}
+
+.tit_colum {
+    font-family: var(--alternative-font);
+    font-weight: 500;
+    margin-top: var(--spacing-16);
+    margin-bottom: var(--spacing-8);
+    font-size: var(--font-large);
+}
+
+.descrip_colum {
+    font-family: var(--alternative-font);
+    font-size: var(--font-medium);
+    padding: var(--spacing-20);
+    margin-top: var(--spacing-8);
+    margin-bottom: var(--spacing-36);
+}
+
+.desc_colum {
+    font-family: var(--alternative-font);
+    font-size: var(--font-small);
+    align-items: center;
+    padding-bottom: var(--spacing-8);
+    margin-bottom: var(--spacing-8);
 }
 
 .info_contacto [class*="icon_"] {
-    font-size: 20ps;
-    margin-right: 9px;
+    font-size: var(--font-small);
+    margin-right: var(--spacing-8);
     position: relative;
     top: 1px;
-}
-
-.info_contacto .social_icon {
-    justify-content: flex-start;
-    margin-top: 50px;
-    margin-bottom: 10px;
-}
-
-.info_contacto .social_icon [class*="icon_"] {
-    background-color: black;
-    color: white;
-    margin-left: 15px;
-    margin-right: 15px;
+    line-height: var(--spacing-24);
 }
 
 .form {
@@ -40,9 +77,13 @@
     padding-top: 0;
 }
 
-.form_label,.form_input_txt,.form_textarea {
+.form_label,
+.form_input_txt,
+.form_textarea {
     display: block;
     width: 100%;
+    font-family: var(--alternative-font);
+    font-size: var(--font-small);
 }
 
 .form_input_txt {
@@ -65,13 +106,16 @@
     font-size: 16px;
 }
 
-.info_contacto .desc_colum {
-    font-size: 14px;
+.btn_contact {
+    display: block;
+    text-align: center;
+    width: 195px;
+    margin: 10px auto;
+    font-size: var(--font-medium);
+    background-color: var(--dark-bg-solid);
+    color: var(--light-font-solid);
+    padding: var(--spacing-16) var(--spacing-36);
+    border-radius: 50px;
+    font-weight: 500;
+    transition: background .3s ease-in-out;
 }
-
-
-
-
-
-
-
