se corrigio el css de item

--- a/css/pages/item.css
+++ b/css/pages/item.css
@@ -27,7 +27,7 @@ margin-bottom: 11px;
 #babyYoda{
   color: var(--dark-solid);
 font-family: var(--base-font);
-font-size: var(-font-jumbo);
+font-size: var(--font-jumbo);
 font-style: normal;
 font-weight: 700;
 line-height: normal;
@@ -37,6 +37,15 @@ margin-bottom: 16px;
   color: var(--dark-bg-solid);
 font-family: var(--base-font);
 font-size: var(--font-large);
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+margin-bottom: 16px;
+}
+#descrip__price{
+  color: var(--dark-bg-solid);
+font-family: var(--base-font);
+font-size: var(--font-jumbo);
 font-style: normal;
 font-weight: 400;
 line-height: normal;
@@ -69,7 +78,7 @@ margin-bottom: 16px;
   display: flex;
   flex-flow: row;
   align-items: center;
-  gap: 8px;
+  gap: 16px;
   height: 37.9px;
  margin-bottom: 29.7px;
 }
