--- a/css/pages/register.css
+++ b/css/pages/register.css
@@ -2,19 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* text-align: center; */
 }
 
 .register {
     width: 1040px;
-    /* margin-left: auto;
-    margin-right: auto; */
     padding-top: 36px;
     padding-bottom: 40px;
-    /* text-align: center; */
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
 }
 
 .texto {
@@ -25,12 +18,10 @@
     font-weight: 500;
     line-height: normal;
     letter-spacing: 1.28px;
-    padding-top:20px;
+    padding-top: 20px;
 }
 
-
 .register-header {
-    /* width:fit-content */
     text-align: center;
     font-size: 20px;
     letter-spacing: 1.68px;
@@ -45,7 +36,7 @@
 
 .datospersonales {
     display: grid;
-    grid-template-columns: 1fr ;
+    grid-template-columns: 1fr;
     padding-bottom: 20px;
 }
 
@@ -55,14 +46,7 @@
     padding-bottom: 20px;
 }
 
-.datospers2 {
-    
-}
-
-.datospers3 {
-}
-
-.txt{
+.txt {
     color: #000;
     font-family: Inter;
     font-size: 24px;
@@ -73,31 +57,30 @@
     padding-left: 50px;
 }
 
-.txt2{
+.txt2 {
     color: #1F1F1F;
-
-font-family: Inter;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
-.txt3{
+.txt3 {
     color: #1D84B5;
-font-family: Inter;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
+
 .regisYaceptar {
     display: grid;
     grid-template-columns: 1fr 3fr;
     padding-left: 70px;
     padding-right: 50px;
     padding-bottom: 20px;
-    
 }
 
 .pass1 {
@@ -110,13 +93,11 @@ line-height: normal;
 }
 
 .text {
-    display:block;
+    display: block;
 }
 
 .write {
     font-size: 20px;
-    /* padding-top: 20PX; */
-    /* padding-bottom;: 20PX */
 }
 
 .complete {
@@ -132,26 +113,23 @@ line-height: normal;
 #pwd1::placeholder {
     padding-bottom: 19px;
     background-image: url(../../img/icons/Group\ 95.svg);
-    background-size: 160px; 
-    background-repeat: no-repeat; /* Hace que no se repita el fondo dentro del placeholder*/
-    background-position: left;/*  Alinea el icono a la izquierda y al centro del campo de entrada */
+    background-size: 160px;
+    background-repeat: no-repeat;
+    /* Hace que no se repita el fondo dentro del placeholder*/
+    background-position: left;
+    /*  Alinea el icono a la izquierda y al centro del campo de entrada */
 }
 
 ::placeholder {
     color: var(--gray);
 }
 
-
-
-
-
 .rec {
     /* text-align: center; */
     height: 40px;
     line-height: 40px;
-    font-size: small;    
+    font-size: small;
 }
-
 
 .forgot {
     color: var(--secondary-solid);
