--- a/css/partials/header.css
+++ b/css/partials/header.css
@@ -24,6 +24,7 @@
     display: inline-block;
     transition: background .3s ease-in-out;
     position: relative;
+    z-index: 3;
 }
 .navbar__link:hover{
     background-color: var(--primary-900);
