--- a/css/pages/item.css
+++ b/css/pages/item.css
@@ -9,47 +9,49 @@
 }
 
 .prod-rel {
-  font-size: 46px;
+  font-size: var(--font-display);
   margin: 20px;
   padding: 20px;
 }
 
-#tituloStar {
+.tituloStar {
   color: var(--dark-bg-solid);
   font-family: var(--base-font);
   font-size: var(--font-small);
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin-bottom: 11px;
+  margin-bottom: var(--spacing-12);
 }
 
-#babyYoda {
+.babyYoda {
   color: var(--dark-solid);
-font-family: var(--base-font);
-font-size: var(--font-jumbo);
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-margin-bottom: 16px;
+  font-family: var(--base-font);
+  font-size: var(--font-jumbo);
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: var(--spacing-16);
 }
-#descrip__price {
+
+.descrip__price {
   color: var(--dark-bg-solid);
-font-family: var(--base-font);
-font-size: var(--font-jumbo);
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-margin-bottom: 16px;
+  font-family: var(--base-font);
+  font-size: var(--font-jumbo);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: var(--spacing-16);
 }
-#descripYoda {
+
+.descripYoda {
   color: var(--dark-bg-solid);
-font-family: var(--base-font);
-font-size: var(--font-large);
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-margin-bottom: 16px;
+  font-family: var(--base-font);
+  font-size: var(--font-large);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: var(--spacing-16);
 }
 
 .inputYoda {
