--- a/css/misc/normalize.css
+++ b/css/misc/normalize.css
@@ -5,6 +5,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { -moz-appearance:textfield; }
 
 html {
     font-family: var(--base-font);
